@@ -625,6 +625,10 @@ uint32_t GrammarApplicator::runRulesOnSingleWindow(SingleWindow& current, const 
 							(*iter)->hit_by.push_back(rule.number);
 							(*iter)->deleted = true;
 						}
+						// Move any enclosed parentheses to the previous cohort
+						if (!cohort->enclosed.empty()) {
+							cohort->prev->enclosed.insert(cohort->prev->enclosed.end(), cohort->enclosed.begin(), cohort->enclosed.end());
+						}
 						cohort->type |= CT_REMOVED;
 						cohort->prev->removed.push_back(cohort);
 						cohort->detach();
